--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <style>
     body { font-family: system-ui, Segoe UI, Arial, sans-serif; margin: 20px; }
-    h1 { font-size: 20px; }
+    h1 { font-size: 20px; margin: 0 0 12px; }
     h2 { font-size: 16px; margin-top: 20px; }
 
     .row { display: flex; gap: 12px; flex-wrap: wrap; }
     .field { display: flex; flex-direction: column; min-width: 220px; }
     label { font-size: 12px; color: #444; }
-    input, select, button {
+    input, select, button, textarea {
       padding: 8px;
       border-radius: 8px;
       border: 1px solid #ccc;
@@ -35,6 +35,8 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 10px;
+      gap: 10px;
+      flex-wrap: wrap;
     }
 
     .actions { display: flex; gap: 8px; flex-wrap: wrap; }
@@ -46,7 +48,27 @@
       padding: 6px;
       border-radius: 6px;
       border: 1px dashed #ccc;
+      min-height: 18px;
     }
+
+    .muted { font-size: 12px; color: #666; }
+    textarea { width: 100%; min-height: 90px; }
+
+    .toast {
+      position: fixed;
+      bottom: 14px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #111;
+      color: #fff;
+      padding: 10px 14px;
+      border-radius: 999px;
+      font-size: 13px;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+    }
+    .toast.show { opacity: 0.92; }
   </style>
 </head>
 
@@ -54,19 +76,33 @@
   <h1>Basic Quote Intake</h1>
 
   <div class="card">
-    <h2>Customer</h2>
+    <div class="card-header">
+      <div>
+        <strong>Customer</strong>
+        <div class="muted" id="saveStatus">Auto-saved locally</div>
+      </div>
+      <div class="actions">
+        <button id="btnNew" type="button">New Intake</button>
+        <button id="btnOpen" type="button">Open…</button>
+        <button id="btnSave" type="button">Save</button>
+        <button id="btnSaveAs" type="button">Save As…</button>
+        <button id="btnDownload" type="button">Download JSON</button>
+        <button id="btnImport" type="button">Import JSON</button>
+      </div>
+    </div>
+
     <div class="row">
       <div class="field">
         <label>Name</label>
-        <input id="custName">
+        <input id="custName" autocomplete="off">
       </div>
       <div class="field">
         <label>Phone</label>
-        <input id="custPhone">
+        <input id="custPhone" autocomplete="off">
       </div>
       <div class="field">
         <label>Email</label>
-        <input id="custEmail">
+        <input id="custEmail" autocomplete="off">
       </div>
     </div>
 
@@ -80,6 +116,17 @@
         <select id="vehicleCount"></select>
       </div>
     </div>
+
+    <div class="row" style="margin-top:12px">
+      <div class="field" style="min-width: 100%">
+        <label>Import / Export JSON</label>
+        <textarea id="jsonBox" placeholder="Export will appear here, or paste JSON here and click Import JSON"></textarea>
+      </div>
+    </div>
+
+    <div class="muted" style="margin-top:10px">
+      VIN decoding uses NHTSA vPIC. Saving works best in Edge/Chrome using file access.
+    </div>
   </div>
 
   <h2>Drivers</h2>
@@ -87,6 +134,8 @@
 
   <h2>Vehicles</h2>
   <div id="vehicles"></div>
+
+  <div id="toast" class="toast"></div>
 
   <script src="app.js"></script>
 </body>
