Add file import functionality and update app state structure in Quote Intake Tool
Introduced a new button for importing files and an associated hidden file input. Enhanced state management by normalizing imported data and refactoring the app state structure to accommodate nested fields for customer, home, and business details. Improved error handling for file operations and updated UI rendering logic for better user experience.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         <button id="btnSave" type="button">Save</button>
         <button id="btnSaveAs" type="button">Save As…</button>
         <button id="btnDownload" type="button">Download JSON</button>
+        <button id="btnImportFile" type="button">Import File…</button>
         <button id="btnImport" type="button">Import JSON</button>
+        <input id="fileImport" type="file" accept=".json,application/json" style="display:none">
       </div>
     </div>
 
